# rust-go-nextjs

./: README.md  compose.yaml
backend/: rust.dockerfile
backend/src/: main.rs
frontend/: next.dockerfile  package-lock.json
frontend/src/components/: UserInterface.tsx
go_backend/: go.dockerfile  go.mod  main.go
rust_backend/: Cargo.toml  rust.dockerfile
