[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
actix-web = "4"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
chrono = "0.4.38"
dotenv = "0.15.0"
actix-rt = "2.10.0"
actix-cors = "0.7.0"
